<resources>
    <string name="library_name">Elastos DID</string>
    <string name="nav_home">home</string>
    <string name="nav_charges">Transfer between ELA</string>
    <string name="nav_pay">Transfer between DID Integral</string>
    <string name="nav_mine">me</string>
    <string name="nav_all">All</string>
    <string name="nav_record1">DID->DID</string>
    <string name="nav_record2">DID->ELA</string>
    <string name="nav_record3">ELA->ELA</string>
    <string name="nav_record4">ELA->DID</string>

    <string name="home_wallet">wallet</string>
    <string name="home_wallet_name">My DID Address</string>
    <string name="home_balance">Walletbalance</string>
    <string name="home_expense">expense</string>
    <string name="home_income">income</string>
    <string name="home_didinfo">DID info</string>
    <string name="did_balance">DID Balance</string>
    <string name="ela_balance">ELA Balance</string>
    <string name="did_qr">DID QrCode</string>
    <string name="ela_qr">ELA QrCode</string>

    <string name="charge_copytips">(Click to copy address)</string>
    <string name="charge_reset">Reset address</string>

    <string name="send_recipient">recipient</string>
    <string name="send_enter_address">Please enter ELA address</string>
    <string name="send_backup">Your wallet has not been backed up</string>
    <string name="send_tips">Keep your wallet safe, you should back up you wallet information.Then you can make payment transactions</string>
    <string name="send_enter_pwd">Enter Spending Password</string>
    <string name="send_sending">Sending transaction, It may take some time, Please be patient</string>
    <string name="send_creating">Creating transaction</string>
    <string name="send_click">Click to send</string>

    <string name="finance_recharge_addresss">Recharge From</string>
    <string name="finance_recharge_amount">Recharge Amount</string>
    <string name="finance_recharge_phrase">the phrase of recharge account</string>
    <string name="finance_withdraw_addresss">Withdraw To</string>
    <string name="finance_withdraw_amount">Withdraw Amount</string>
    <string name="finance_send_addresss">Recipient</string>
    <string name="finance_send_amount">Recipient Amount</string>

    <string name="me_recharge">Exchange ELA for Integral</string>
    <string name="me_withdraw">Exchange Integral for ELA</string>
    <string name="me_records">Records</string>
    <string name="me_finance">Asset Management</string>
    <string name="me_information">Personal Information</string>
    <string name="me_history">Recharge and withdraw record</string>
    <string name="me_preference">preference</string>
    <string name="me_preference_language">Language</string>
    <string name="me_preference_language_select_english">ENGLISH</string>
    <string name="me_preference_language_select_chinese">中文</string>
    <string name="me_preference_wallet">Switch Account</string>

    <string name="word_issafe">Is your environment safe to use?</string>
    <string name="word_besafe">Please make sure there is no security issue in the surrounding environment</string>
    <string name="word_resume">Anyone who holds your resume phrase, he can access or use your money</string>
    <string name="word_remember">Please remember this sentence carefully</string>
    <string name="word_confirm">We will confirm next page</string>
    <string name="word_written">I have written it down</string>
    <string name="word_verify">Let\'s verify your backup phrase</string>
    <string name="word_click">Please click each word in order</string>
    <string name="word_iscorrect">Is this correct?</string>
    <string name="word_sure">SURE</string>
    <string name="word_cleanup">clean up</string>
    <string name="word_wrong">Phrase not correct, Please retry!</string>
    <string name="word_backdup">Your wallet has been backed up</string>
    <string name="word_tips">Please store your phrases in a safe place. If the program is deleted, no phrase will not be able to recover the wallet.</string>
    <string name="word_newpwd">Please enter a new payment password</string>
    <string name="input_pwd">Input Password</string>
    <string name="word_pwdtips">Payment password can not be resumed. Be sure to remember it well.(at least 8 bits)</string>

    <string name="import_wallet">Import the wallet</string>
    <string name="input_phrase">Please input backup phrase.\n(Usually 12 words, spaces between words.)</string>
    <string name="set_pwd">Set payment password(at least 8 bits)</string>
    <string name="import_pwd">password</string>
    <string name="import_pwd_again">again</string>

    <string name="dialog_becareful">Be careful</string>
    <string name="dialog_switch_wallet">You are switching your wallet. Make sure the current wallet is backed up</string>
    <string name="dialog_unable_import">Unable to import</string>
    <string name="dialog_invalid_phrase">Invalid wallet recovery phrase</string>
    <string name="dialog_send_success">Send Success!</string>
    <string name="dialog_recharge_success">Recharge Success!</string>
    <string name="dialog_withdraw_success">Withdraw Success!</string>
    <string name="dialog_finance_failed">The last transaction is not completed. Please try again later.</string>
    <string name="dialog_trans_notenough">Not Enough Balance!</string>
    <string name="dialog_trans_failed">Send transaction failed, Please try again later.</string>

    <string name="scan_noresult">There\'s no result, Please retry!</string>
    <string name="toast_pwd_notcorrect">The length of password is too short</string>
    <string name="toast_pwd_same">The passwords are inconsistent</string>
    <string name="toast_pwd_wrong">The password is wrong</string>
    <string name="toast_import_success">Import Success!</string>
    <string name="toast_copy">Copy success!</string>

    <string name="loading">Loading···</string>
    <string name="trans_sending">Sending Transaction···</string>
    <string name="amount">Amount: </string>
    <string name="fee">Fee: </string>

    <string name="btn_import">import</string>
    <string name="btn_last">LAST</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_ok">ok</string>
    <string name="btn_backup">Back Up</string>

    <string name="params_invalid">params invalid</string>

    <string name="version">Made by the Elastos Application Lab. \nVersion </string>

</resources>
