<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/nav_title"/>

    <TextView
        android:id="@+id/tv_import_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:textSize="14sp"
        android:text="@string/input_phrase"/>

    <EditText
        android:id="@+id/et_import_word"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_roundcorner_white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/textBlack"
        android:textSize="14sp"
        android:text="@string/set_pwd"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="numberPassword"
        android:textSize="14sp"
        android:textColor="@color/textBlack"
        android:background="@android:color/white"
        android:hint="@string/import_pwd"/>

    <EditText
        android:id="@+id/et_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:inputType="numberPassword"
        android:textSize="14sp"
        android:textColor="@color/textBlack"
        android:background="@android:color/white"
        android:hint="@string/import_pwd_again"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/bg_roundcorner_blue"
        android:textColor="@android:color/white"
        android:text="@string/btn_import"
        android:onClick="onImportClick"/>

</LinearLayout>
