<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    android:orientation="vertical">

    <include layout="@layout/nav_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:textColor="@color/textBlack"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/word_issafe"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="22dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:textSize="14sp"
        android:text="@string/word_besafe"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="53dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_nocamera"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="22dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:textSize="14sp"
        android:text="@string/word_resume"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_roundcorner_blue"
        android:textColor="@android:color/white"
        android:text="@string/btn_next"
        android:onClick="onNextClick"/>
</LinearLayout>
