<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/nav_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/textBlack"
        android:text="@string/word_remember" />

    <TextView
        android:id="@+id/tv_word_show"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textColor="@color/appColor"
        android:textSize="20sp"
        android:background="@drawable/bg_dashline_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:textSize="14sp"
        android:text="@string/word_confirm"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_roundcorner_blue"
        android:textColor="@android:color/white"
        android:text="@string/word_written"
        android:onClick="onOKClick"/>


</LinearLayout>
