<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ela.wallet.sdk.didlibrary.MainActivity">

    <include
        layout="@layout/nav_title"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@android:color/white" >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/textBlack"
            android:textSize="16sp"
            android:text="@string/me_withdraw"/>
        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_below="@id/tv_title"
            android:background="@color/bgGray"
            android:textSize="14sp"
            android:hint="SELA(1 ELA = 100000000 SELA)"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginLeft="15dp"
            android:gravity="left|center_vertical"
            android:textSize="16dp"
            android:textColor="@color/textBlack"
            android:text="@string/send_recipient"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:id="@+id/et_scan_address"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@color/bgGray"
                android:textSize="14sp"
                android:textColorHint="@color/hintGray"
                android:hint="@string/send_enter_address"/>
            <ImageView
                android:id="@+id/iv_scan"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_scan"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_roundcorner_blue"
        android:textColor="@android:color/white"
        android:text="@string/btn_ok"
        android:onClick="onOKClick"/>

</LinearLayout>
