<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgGray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_roundcorner_white">
        <TextView
            android:id="@+id/tv_home_did_title"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/textBlack"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/home_wallet"/>
        <ImageView
            android:id="@+id/iv_home_did_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/tv_home_did_title"
            android:src="@drawable/ic_wallet"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_home_did_icon"
            android:layout_alignTop="@id/iv_home_did_icon"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:gravity="center_vertical"
                android:textColor="@color/textBlack"
                android:textSize="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/home_wallet_name"/>
            <TextView
                android:id="@+id/tv_home_did_balance"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/home_balance"
                tools:text="Wallet balance: 0.00 ELA"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_roundcorner_white">
        <LinearLayout
            android:id="@+id/ll_home_trans"
            android:layout_width="match_parent"
            android:layout_height="49dp">
            <Button
                android:id="@+id/btn_home_trans_expense"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:textAllCaps="false"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                android:text="@string/home_expense"/>
            <View
                android:background="@color/bgGray"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn_home_trans_income"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:textAllCaps="false"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                android:text="@string/home_income"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_home_trans">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</LinearLayout>
