<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        layout="@layout/nav_title"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/send_panel" >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:lines="1"
            android:textColor="@color/textBlack"
            android:textSize="16sp"
            android:text="@string/finance_recharge_amount"
            android:drawableLeft="@drawable/panel_icon_recharge"/>
        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_below="@id/tv_title"
            android:background="@drawable/send_input"
            android:inputType="number|numberDecimal"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center_vertical|right"
            android:layout_below="@id/tv_title"
            android:layout_alignParentRight="true"
            android:text="ELA"
            android:textColor="@color/textBlack"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/send_panel" >
        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:lines="1"
            android:textColor="@color/textBlack"
            android:textSize="16sp"
            android:text="@string/finance_recharge_addresss"
            android:drawableLeft="@drawable/panel_icon_recharge"/>
        <EditText
            android:id="@+id/et_scan_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:layout_below="@id/tv_title2"
            android:layout_toLeftOf="@id/iv_scan"
            android:background="@drawable/send_input"
            android:inputType="text"
            android:textSize="14sp"
            android:hint="@string/send_enter_address" />
        <ImageView
            android:id="@+id/iv_scan"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignTop="@id/et_scan_address"
            android:layout_alignBottom="@id/et_scan_address"
            android:layout_marginRight="15dp"
            android:layout_below="@id/tv_title2"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_scan"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_roundcorner_blue"
        android:textColor="@android:color/white"
        android:text="@string/btn_ok"
        android:onClick="onOKClick"/>

</LinearLayout>
