<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/nav_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/receive_panel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:textColor="@color/textBlack"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/charge_copytips"/>

    <ImageView
        android:id="@+id/iv_charge_qr"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_qr"/>

    <TextView
        android:id="@+id/tv_charge_copyaddress"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:paddingBottom="7dp"
        android:layout_gravity="center"
        android:textColor="@color/textBlack"
        android:textSize="12sp"
        android:gravity="center"
        tools:text="fh432rh23fn384yo28hfnr3gfn38ty58t3fm"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_charge_reset_address"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:textColor="@color/hintGray"
        android:textSize="14sp"
        android:text="@string/charge_reset"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:gravity="left|center_vertical">
        <ImageView
            android:id="@+id/iv_charge_did_icon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/walletbalance_icon_wallet"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_charge_did_icon"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_charge_did"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:gravity="center_vertical"
                android:textColor="@color/textBlack"
                android:textSize="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/home_balance"/>
            <TextView
                android:id="@+id/tv_charge_did_balance"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/textBlack"
                android:textSize="14sp"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                tools:text="Wallet balance: 0.00 ELA"/>
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
